flag styled and z-index fixess

--- a/src/Components/Planets/Variants/Earth/Earth.sass
+++ b/src/Components/Planets/Variants/Earth/Earth.sass
@@ -5,18 +5,20 @@
 @import './Components/Islands.sass'
 
 $earth-rotation-speed: 24s
-// $earth-rotation-speed: 0s
+$earth-rotation-speed: 12s
 
 $cloud-scale-factor: 0.3
-$cloud-rotation-speed: 38s
+// $cloud-rotation-speed: 38s
+$cloud-rotation-speed: 16s
 $cloud-layer-separation-distance: 0.1vmin
 $cloud-total-depth: $cloud-layers * $cloud-layer-separation-distance
-$cloud-separation-from-earth: 1vmin
+$cloud-separation-from-earth: 2vmin
 $cloud-fin-scale-factor: 0.05
 
 .planet--flag
-  z-index: 2
+  z-index: 1
   position: absolute
+  animation: elevate-flag $earth-rotation-speed math.div(44, 360) * -1 * $earth-rotation-speed steps(2,start) infinite
   .sphere
     animation: rotate-earth $earth-rotation-speed linear infinite
     .landmark
@@ -34,7 +36,7 @@ $cloud-fin-scale-factor: 0.05
           border: 0.1vmin solid #636262
           border-radius: 1vmin
           width: 1vmin
-          height: 30vmin
+          height: 20vmin
         .pole::before
           position: absolute
           top: -1.4vmin
@@ -52,41 +54,14 @@ $cloud-fin-scale-factor: 0.05
           z-index: 10
           background-color: #eb573b
           border: .1vmin solid #d64b38
-          width: 15vmin
-          height: 9vmin
-        .shadow 
-          position: absolute
-          top: 7vmin
-          left: 9vmin
-          z-index: 4
-          width: 0 
-          height: 0 
-          border-top: 3vmin solid transparent
-          border-bottom: 3.2vmin solid transparent
-          border-left: 6.2vmin solid #c14333
-        .flag-2
-          position: absolute 
-          top: 4vmin
-          left: 9vmin
-          z-index: 1
-          background-color: #eb573b
-          width: 15vmin
-          height: 9vmin
-        .flag-2:after
-          position: absolute
-          left: 10vmin
-          top: -1.5vmin
-          display: block
-          width: 0 
-          height: 0 
-          border-top: 6vmin solid transparent
-          border-bottom: 6vmin solid transparent 
-          border-right: 6vmin solid transparent
-          content:''
+          width: 22vmin
+          height: 11vmin
+          background: linear-gradient(180deg, transparent, transparent 4.4vmin, #c8102e 4.4vmin, #c8102e 6.6vmin, transparent 6.6vmin, transparent 100%), linear-gradient(90deg, transparent, transparent 9.9vmin, #c8102e 9.9vmin, #c8102e 12.1vmin, transparent 12.1vmin, transparent 100%), linear-gradient(180deg, transparent, transparent 3.7vmin, #FFF 3.7vmin, #FFF 7.3vmin, transparent 7.3vmin, transparent 100%), linear-gradient(90deg, transparent, transparent 9.2vmin, #FFF 9.2vmin, #FFF 12.8vmin, transparent 12.8vmin, transparent 100%), linear-gradient(26.56505deg, transparent, transparent 9.1vmin, #c8102e 9.1vmin, #c8102e 9.8vmin, transparent 9.8vmin, transparent 100%) 0 0/11vmin 100% no-repeat, linear-gradient(-26.56505deg, transparent, transparent 9.8vmin, #c8102e 9.8vmin, #c8102e 10.6vmin, transparent 10.6vmin, transparent 100%) 11vmin 0/11vmin 100% no-repeat, linear-gradient(26.56505deg, transparent, transparent 9.8vmin, #c8102e 9.8vmin, #c8102e 10.6vmin, transparent 10.6vmin, transparent 100%) 11vmin 5.5vmin/11vmin 100% no-repeat, linear-gradient(-26.56505deg, transparent, transparent 9.1vmin, #c8102e 9.1vmin, #c8102e 9.8vmin, transparent 9.8vmin, transparent 100%) 0 5.5vmin/11vmin 100% no-repeat, linear-gradient(27deg, transparent, transparent 8.7vmin, #FFF 8.7vmin, #FFF 10.9vmin, transparent 10.9vmin, transparent 100%), linear-gradient(153deg, transparent, transparent 8.7vmin, #FFF 8.7vmin, #FFF 10.9vmin, transparent 10.9vmin, transparent 100%), #012169
+          
 
 .earth-container
   position: relative
-  z-index: 1
+  z-index: 2
   clip-path: circle(math.div($planet-diameter, 2) - math.div($layer-offset-remainder, 2) * 1vmin)
   .planet
     &:hover
@@ -110,7 +85,7 @@ $cloud-fin-scale-factor: 0.05
           animation: rotate-asia-offset $earth-rotation-speed linear infinite
 
 .planet--clouds
-  animation: elevate-cloud $cloud-rotation-speed linear infinite
+  animation: elevate-cloud $cloud-rotation-speed steps(2,start) infinite
   will-change: transform // as we are elevating
   pointer-events: none
   position: absolute
@@ -120,7 +95,7 @@ $cloud-fin-scale-factor: 0.05
   @for $i from 1 through 36
     $rotation: $i * 10
     &--y-rotation--#{$rotation}
-      animation: elevate-cloud $cloud-rotation-speed math.div($rotation, 360) * -1 * $cloud-rotation-speed linear infinite
+      animation: elevate-cloud $cloud-rotation-speed math.div($rotation, 360) * -1 * $cloud-rotation-speed steps(2,start) infinite
   .sphere
     animation: rotate-earth $cloud-rotation-speed linear infinite
     .hemisphere
@@ -164,12 +139,16 @@ $cloud-fin-scale-factor: 0.05
             &:after
               // translate from center to apex by the appropriate amount, accounting for scale factor.
               transform: translate(map-get($cloud, "center-to-apex") * $scale * 1px, math.div($cloud-fin-scale-factor, 2) * 100% ) rotateY(90deg) scale($scale) 
-
+@keyframes elevate-flag
+  0%
+    z-index: 2
+  100%
+    z-index: 1
 @keyframes elevate-cloud
   0%
-    z-index: 1
+    z-index: 2
   100%
-    z-index: 0
+    z-index: 1
 @keyframes rotate-earth
   0%
     transform: rotateZ(-23.5deg) rotateX(0deg) rotateY(0deg)
